k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vsa-website
  labels:
    name: vsa-website
